# advent-of-code

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  MODULE.bazel  README.md  WORKSPACE  bootstrap.py  requirements.txt  setup.py
2019/day1/: BUILD.bazel  CMakeLists.txt  README.md  solutions.py
2019/day1/c/: main.c  solutions.c  test.cpp
2019/day1/cpp/: main.cpp  solutions.cpp  test.cpp
2019/day1/python/: day1.py
2019/day10/: BUILD.bazel  CMakeLists.txt  solutions.py  utils.py
2019/day10/python/: day10.py  utils.py
2019/day11/: BUILD.bazel  CMakeLists.txt  README.md  solutions.py
2019/day11/python/: day11.py
2019/day12/: BUILD.bazel  CMakeLists.txt  README.md  solutions.py  utils.py
2019/day12/python/: day12.py  utils.py
2019/day13/: BUILD.bazel  CMakeLists.txt  README.md  pong.py  solutions.py
2019/day13/python/: day13.py  pong.py
2019/day14/: BUILD.bazel  CMakeLists.txt  README.md  solutions.py  utils.py
2019/day14/python/: day14.py  utils.py
2019/day15/: BUILD.bazel  CMakeLists.txt  droid.py  solutions.py
2019/day15/python/: day15.py  droid.py
2019/day17/: BUILD.bazel  CMakeLists.txt  README.md  asci.py  solutions.py
2019/day17/python/: asci.py  day17.py
2019/day18/: BUILD.bazel  CMakeLists.txt  README.md  maze.py  solutions.py
2019/day18/python/: day18.py  maze.py  test_maze.py
2019/day19/: BUILD.bazel  CMakeLists.txt  README.md  beam.py  solutions.py
2019/day19/python/: beam.py  day19.py
2019/day2/: BUILD.bazel  CMakeLists.txt  README.md  solutions.py
2019/day2/python/: day2.py
2019/day20/: BUILD.bazel  CMakeLists.txt  README.md  donut.py  solutions.py
2019/day20/python/: day20.py  donut.py  test_donut.py
2019/day21/: BUILD.bazel  CMakeLists.txt  solutions.py  springdroid.py
2019/day21/python/: day21.py  springdroid.py
2019/day23/: BUILD.bazel  CMakeLists.txt  network.py  solutions.py
2019/day23/python/: day23.py  network.py
2019/day25/: BUILD.bazel  CMakeLists.txt  cryo.py  solutions.py
2019/day25/python/: cryo.py  day25.py
2019/day3/: BUILD.bazel  CMakeLists.txt  README.md  solutions.py
2019/day3/python/: day3.py
2020/: CMakeLists.txt  README.md  bootstrap.py  check_clang_format.sh  run_python_tests.sh
2020/.github/workflows/: python.yml
2020/cmake/: CompileFlags.cmake
2020/day1/: BUILD.bazel  CMakeLists.txt  README.md  solutions.py
2020/day1/python/: day1.py  report.py  test_day1.py
2020/day10/: BUILD.bazel  CMakeLists.txt  solutions.py
2020/day10/python/: day10.py
2020/day11/: BUILD.bazel  CMakeLists.txt  solutions.py
2020/day11/python/: day11.py
2020/day12/: BUILD.bazel  CMakeLists.txt  solutions.py
2020/day12/python/: day12.py
2020/day13/: BUILD.bazel  CMakeLists.txt  solutions.py
2020/day13/python/: day13.py
2020/day14/: BUILD.bazel  CMakeLists.txt  solutions.py
2020/day14/python/: day14.py
2020/day15/: BUILD.bazel  CMakeLists.txt  solutions.py
2020/day15/python/: day15.py
2020/day16/: BUILD.bazel  CMakeLists.txt  solutions.py
2020/day16/python/: day16.py
2020/day17/: BUILD.bazel  CMakeLists.txt  solutions.py
2020/day18/: BUILD.bazel  CMakeLists.txt  solutions.py
2020/day19/: BUILD.bazel  CMakeLists.txt  solutions.py
2020/day2/: BUILD.bazel  CMakeLists.txt  README.md  solutions.py
2020/day20/: BUILD.bazel  CMakeLists.txt  solutions.py
2020/day21/: BUILD.bazel  CMakeLists.txt  solutions.py
2020/day22/: BUILD.bazel  CMakeLists.txt  solutions.py
2020/day23/: BUILD.bazel  CMakeLists.txt  solutions.py
2020/day24/: BUILD.bazel  CMakeLists.txt  solutions.py
2020/day25/: BUILD.bazel  CMakeLists.txt  solutions.py
2020/day3/: BUILD.bazel  CMakeLists.txt  solutions.py
2020/day4/: BUILD.bazel  CMakeLists.txt  solutions.py
2020/day5/: BUILD.bazel  CMakeLists.txt  solutions.py
2020/day6/: BUILD.bazel  CMakeLists.txt  solutions.py
2020/day7/: BUILD.bazel  CMakeLists.txt  solutions.py
2020/day8/: BUILD.bazel  CMakeLists.txt  solutions.py
2020/day9/: BUILD.bazel  CMakeLists.txt  solutions.py
2020/templates/: CMakeLists.txt_tmp  template_day.py  template_test_day.py
2020/test/: CMakeLists.txt  common_utils.hpp  main.cpp  test.cpp  test.hpp
bazel/: BUILD.ftxui.bazel  boost.BUILD  boost_linux.BUILD  boost_osx.BUILD  compile_flags.bzl  ncurses.BUILD  ncurses_linux.BUILD  ncurses_osx.BUILD
utils/: BUILD.bazel  CMakeLists.txt  c_utils.c  cpp_utils.cpp  cpp_utils.hpp  test_utils.cpp  utils.cpp  utils.hpp
utils/bash/: check_clang_format.sh  run_clang_format.sh
utils/c/: c_utils.c
utils/cpp/: BUILD.bazel  cpp_utils.cpp
year2022/: CMakeLists.txt
year2022/day1/: BUILD.bazel  CMakeLists.txt  solutions.py
year2022/day10/: BUILD.bazel  CMakeLists.txt  solutions.py
year2022/day11/: BUILD.bazel  CMakeLists.txt  solutions.py
year2022/day12/: BUILD.bazel  CMakeLists.txt  solutions.py
year2022/day13/: BUILD.bazel  CMakeLists.txt  solutions.py
year2022/day14/: BUILD.bazel  CMakeLists.txt  solutions.py
year2022/day15/: BUILD.bazel  CMakeLists.txt  solutions.py
year2022/day16/: BUILD.bazel  CMakeLists.txt  solutions.py
year2022/day17/: BUILD.bazel  CMakeLists.txt  solutions.py
year2022/day18/: BUILD.bazel  CMakeLists.txt  solutions.py
year2022/day19/: BUILD.bazel  CMakeLists.txt  solutions.py
year2022/day2/: BUILD.bazel  CMakeLists.txt  solutions.py
year2022/day20/: BUILD.bazel  CMakeLists.txt  solutions.py
year2022/day21/: BUILD.bazel  CMakeLists.txt  solutions.py
year2022/day22/: BUILD.bazel  CMakeLists.txt  solutions.py
year2022/day23/: BUILD.bazel  CMakeLists.txt  solutions.py
year2022/day24/: BUILD.bazel  CMakeLists.txt  solutions.py
year2022/day25/: BUILD.bazel  CMakeLists.txt  solutions.py
year2022/day3/: BUILD.bazel  CMakeLists.txt  solutions.py
year2022/day4/: BUILD.bazel  CMakeLists.txt  solutions.py
year2022/day5/: BUILD.bazel  CMakeLists.txt  solutions.py
year2022/day6/: BUILD.bazel  CMakeLists.txt  solutions.py
year2022/day7/: BUILD.bazel  CMakeLists.txt  solutions.py
year2022/day8/: BUILD.bazel  CMakeLists.txt  solutions.py
year2022/day9/: BUILD.bazel  CMakeLists.txt  solutions.py
(+655 files in other folders)
