module(
    name = "advent-of-code",
    version = "0.1.0",
)

############################################
# REQUIRED: platforms repo
############################################
bazel_dep(name = "platforms", version = "0.0.11")

############################################
# googletest
############################################
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")

############################################
# boost
############################################
bazel_dep(name = "boost.regex", version = "1.89.0.bcr.2")

############################################
# hedron_compile_commands
############################################
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/mikael-s-persson/bazel-compile-commands-extractor",
    commit = "f5fbd4cee671d8d908f37c83abaf70fba5928fc7"
)
