load("//bazel:compile_flags.bzl","get_compiler_flags","get_linker_flags")

cc_library(
    name = "monitorstation",
    srcs = ["cpp/src/monitorstation.cpp"],
    hdrs = ["cpp/include/monitorstation.hpp"],
    deps = [
        "//utils/cpp:utils_lib"
    ],
    defines = ["SOURCE_DIR=\\\"./2019/day10\\\""],
    copts = get_compiler_flags(),
    linkopts = get_linker_flags(),
)

cc_binary(
    name = "main",
    srcs = ["cpp/src/main.cpp"],
    deps = [
        ":monitorstation",
    ],
    copts = get_compiler_flags(),
    linkopts = get_linker_flags(),
)

cc_test(
    name = "test",
    srcs = ["cpp/src/test.cpp"],
    deps = [
        "@com_google_googletest//:gtest_main",
        ":monitorstation",
    ],
    copts = get_compiler_flags(),
    linkopts = get_linker_flags(),
    data = [
        ":test_data"
    ]
)

filegroup(
    name = "test_data",
    srcs = glob(["data/*.txt"])
)
