load("//bazel:compile_flags.bzl","get_compiler_flags","get_linker_flags")

cc_library(
    name = "paint",
    srcs = ["cpp/src/paint.cpp"],
    hdrs = ["cpp/include/paint.hpp"],
    deps = [
        "//utils/cpp:utils_lib",
        "//2019/day5:intcode",
    ],
    defines = ["SOURCE_DIR=\\\"./2019/day11\\\""],
    copts = get_compiler_flags(),
    linkopts = get_linker_flags(),
)

cc_binary(
    name = "main",
    srcs = ["cpp/src/main.cpp"],
    deps = [
        ":paint",
    ],
    copts = get_compiler_flags(),
    linkopts = get_linker_flags(),
)