load("//bazel:compile_flags.bzl","get_compiler_flags","get_linker_flags")

cc_library(
    name = "pong",
    srcs = ["cpp/src/pong.cpp"],
    hdrs = ["cpp/include/pong.hpp"],
    deps = [
        "//2019/day5:intcode",
        "@ncurses//:ncurses-lib",
    ],
    defines = ["SOURCE_DIR=\\\"./2019/day13\\\""],
    copts = get_compiler_flags(),
    linkopts = get_linker_flags(),
)

cc_binary(
    name = "main",
    srcs = ["cpp/src/main.cpp"],
    deps = [
        ":pong",
    ],
    copts = get_compiler_flags(),
    linkopts = get_linker_flags(),
)