load("//bazel:compile_flags.bzl","get_compiler_flags","get_linker_flags")

cc_library(
    name = "asci",
    srcs = ["cpp/src/asci.cpp"],
    hdrs = ["cpp/include/asci.hpp"],
    deps = [
        "//2019/day5:intcode",
        "@boost//:boost-headers",
        "@ncurses//:ncurses-lib",
    ],
    defines = ["SOURCE_DIR=\\\"./2019/day17\\\""],
    copts = get_compiler_flags(),
    linkopts = get_linker_flags(),
)

cc_binary(
    name = "main",
    srcs = ["cpp/src/main.cpp"],
    deps = [
        ":asci",
    ],
    copts = get_compiler_flags(),
    linkopts = get_linker_flags(),
)