load("//bazel:compile_flags.bzl","get_compiler_flags","get_linker_flags")

cc_library(
    name = "beam",
    srcs = ["cpp/src/beam.cpp"],
    hdrs = ["cpp/include/beam.hpp"],
    deps = [
        "//2019/day5:intcode",
    ],
    defines = ["SOURCE_DIR=\\\"./2019/day19\\\""],
    copts = get_compiler_flags(),
    linkopts = get_linker_flags(),
)

cc_binary(
    name = "main",
    srcs = ["cpp/src/main.cpp"],
    deps = [
        ":beam",
    ],
    copts = get_compiler_flags(),
    linkopts = get_linker_flags(),
)