load("//bazel:compile_flags.bzl","get_compiler_flags","get_linker_flags")

cc_library(
    name = "springdroid",
    srcs = ["cpp/src/springdroid.cpp"],
    hdrs = ["cpp/include/springdroid.hpp"],
    deps = [
        "//2019/day5:intcode",
    ],
    defines = ["SOURCE_DIR=\\\"./2019/day21\\\""],
    copts = get_compiler_flags(),
    linkopts = get_linker_flags(),
)

cc_binary(
    name = "main",
    srcs = ["cpp/src/main.cpp"],
    deps = [
        ":springdroid",
    ],
    copts = get_compiler_flags(),
    linkopts = get_linker_flags(),
)