load("//bazel:compile_flags.bzl","get_compiler_flags","get_linker_flags")

cc_library(
    name = "network",
    srcs = ["cpp/src/network.cpp"],
    hdrs = ["cpp/include/network.hpp"],
    deps = [
        "//2019/day5:intcode",
    ],
    defines = ["SOURCE_DIR=\\\"./2019/day23\\\""],
    copts = get_compiler_flags(),
    linkopts = get_linker_flags(),
)

cc_binary(
    name = "main",
    srcs = ["cpp/src/main.cpp"],
    deps = [
        ":network",
    ],
    copts = get_compiler_flags(),
    linkopts = get_linker_flags(),
)