load("//bazel:compile_flags.bzl","get_compiler_flags","get_linker_flags")

cc_library(
    name = "cryo",
    srcs = ["cpp/src/cryo.cpp"],
    hdrs = ["cpp/include/cryo.hpp"],
    deps = [
        "//2019/day5:intcode",
    ],
    defines = ["SOURCE_DIR=\\\"./2019/day25\\\""],
    copts = get_compiler_flags(),
    linkopts = get_linker_flags(),
)

cc_binary(
    name = "main",
    srcs = ["cpp/src/main.cpp"],
    deps = [
        ":cryo",
    ],
    copts = get_compiler_flags(),
    linkopts = get_linker_flags(),
)